# Tutorials

cpp/cpp-tut/: a.out  main.cpp
drf-next-project/django-drf/: db.sqlite3  pyproject.toml
drf-next-project/django-drf/core/: settings.py
drf-next-project/django-drf/store/: admin.py
drf-next-project/django-drf/store/migrations/: 0001_initial.py  0002_rename_decription_product_description.py
game-dev/flappy-bird/: classes.js  index.html  main.js
graphql-next-project/django/: workspace.code-workspace
graphql-next-project/nextjs/: package.json
handwriting-ml-dj/: README.md  db.sqlite3  pyproject.toml
handwriting-ml-dj/core/: settings.py  urls.py
handwriting-ml-dj/sample/: admin.py  forms.py  handwriting.py  models.py  urls.py  views.py
handwriting-ml-dj/sample/migrations/: 0001_initial.py
handwriting-ml-dj/sample/templates/sample/: handwriting.html
html-pong-game/: index.html  script.js
loginpage-next/: .eslintrc.json  .prettierrc.json  next.config.js  package.json
porto-drf-next/: .gitignore  workspace.code-workspace
porto-drf-next/backend/: .gitignore  pyproject.toml
porto-drf-next/backend/about/: admin.py  models.py  serializers.py  urls.py  views.py
porto-drf-next/backend/about/migrations/: 0001_initial.py
porto-drf-next/backend/config/: settings.py  urls.py
porto-drf-next/backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
porto-drf-next/backend/contact/migrations/: 0001_initial.py
porto-drf-next/backend/projects/: admin.py  models.py  serializers.py  urls.py  views.py
porto-drf-next/backend/projects/migrations/: 0001_initial.py
porto-drf-next/backend/technologies/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
porto-drf-next/backend/technologies/migrations/: 0001_initial.py
porto-drf-next/frontend/: next.config.js  package.json
price-scrapping/: pyproject.toml  scrape.py
ts-crashcourse/src/: index.ts
(+30 files in other folders)
