[tool.poetry]
name = "price-scrapping"
version = "0.1.0"
description = ""
authors = ["rkhaq <rqk.email2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
